k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dnd-ai-master
  labels:
    name: dnd-ai-master
